--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,4 +1,13 @@
-spring.application.name=demo
+spring.application.name=e-tech_care
 
+spring.datasource.url=jdbc:mysql://localhost:3306/e-tech_care
+
+spring.datasource.username=root
+spring.datasource.password=Januda200300@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+springdoc.swagger-ui.enabled=true
 
 #adfaadfadf
