user registation login and authentication was done

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -9,5 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 springdoc.swagger-ui.enabled=true
+# JWT Configuration
+jwt.secret=mySecretKeyThatIsAtLeast32CharactersLongForHS256Algorithm
+jwt.expiration=36000000
+jwt.refresh-expiration=86400000
 
 #adfaadfadf
