--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Ignore Spring Boot application properties
+src/main/resources/application.properties
+
 # Ignore application.properties only
 !**src/main/resources/application.properties
 
