--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=e-tech_care
 spring.datasource.url=jdbc:mysql://localhost:3306/e-tech_care
 
 spring.datasource.username=root
-spring.datasource.password=Januda200300@
+spring.datasource.password=phctwa2002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -15,4 +15,27 @@ jwt.secret=mySecretKeyThatIsAtLeast32CharactersLongForHS256Algorithm
 jwt.expiration=36000000
 jwt.refresh-expiration=86400000
 
-#adfaadfadf
+# Server
+server.port=8080
+
+
+# JPA/Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# JWT
+
+
+# CORS
+spring.web.cors.allowed-origins=http://localhost:3000,http://localhost:5173
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+
+# File Upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.etechcare=DEBUG
