--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=e-tech_care
 spring.datasource.url=jdbc:mysql://localhost:3306/e-tech_care2
 
 spring.datasource.username=root
-spring.datasource.password=phctwa2002
+spring.datasource.password=Januda200300@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
