Ignore application.properties

--- a/back-end/.gitignore
+++ b/back-end/.gitignore
@@ -8,7 +8,7 @@ target/
 src/main/resources/application.properties
 
 # Ignore application.properties only
-!**src/main/resources/application.properties
+#!**src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
